--- a/static/ps-movies/movie-details.component.html
+++ b/static/ps-movies/movie-details.component.html
@@ -1,1 +1,9 @@
-<h1>{{model.movie | json}}</h1>
+<h3>Details for :{{model.movie.id}}</h3>
+
+<ul>
+    <li><a ng-link="['Overview']">Overview</a></li>
+    <li><a ng-link="['Cast']">Cast</a></li>
+    <li><a ng-link="['Director']">Director</a></li>
+</ul>
+
+<ng-outlet></ng-outlet>
