adding max star to show. on the rating component. changing tranclude directive for span iteration

--- a/static/ps-movies/movie-list.component.html
+++ b/static/ps-movies/movie-list.component.html
@@ -11,8 +11,7 @@
                 <td>{{movie.title}}</td>
                 <td>{{movie.length}}</td>
                 <td>
-                    <movie-rating value='movie.rating'>
-                        <span class="glyphicon glyphicon-star"></span>
+                    <movie-rating value='movie.rating' max='5'>
                     </movie-rating>
                 </td>
                 <td>
