--- a/static/ps-movies/movie-rating.component.html
+++ b/static/ps-movies/movie-rating.component.html
@@ -1,5 +1,3 @@
-<span ng-repeat="counter in model.entries track by $index">
-    <ng-transclude>
-        *
-    </ng-transclude>
+<span ng-repeat="entry in model.entries track by $index">
+    <span class="glyphicon {{entry}}"></span>
 </span>
